force-app/main/default/objects/Equipo_actual__c/Equipo_actual__c.object-meta.xml
<CustomObject>
    <description>Se registran los equipos que tienen los posibles clientes cuando son visitados. Maestro de detalle de la nueva oferta</description>
    <label>Equipo actual</label>
    <nameField>
        <label>Nombre de Equipo actual</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipos actuales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>