force-app/main/default/objects/Equipo_actual__c/fields/Antig_edad__c.field-meta.xml
<CustomField>
    <fullName>Antig_edad__c</fullName>
    <label>Antigüedad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 4 años</fullName>
            </value>
            <value>
                <fullName>de 4 a 8 años</fullName>
            </value>
            <value>
                <fullName>&gt; 8 años</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>