force-app/main/default/objects/Equipo_actual__c/fields/Anyo__c.field-meta.xml
<CustomField>
    <fullName>Anyo__c</fullName>
    <label>Año</label>
    <length>4</length>
    <type>Text</type>
</CustomField>