force-app/main/default/objects/Equipo_actual__c/fields/Candidato__c.field-meta.xml
<CustomField>
    <fullName>Candidato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidato</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Equipos actuales</relationshipLabel>
    <relationshipName>Equipos_actuales</relationshipName>
    <type>Lookup</type>
</CustomField>