force-app/main/default/objects/Equipo_actual__c/fields/Energ_a__c.field-meta.xml
<CustomField>
    <fullName>Energ_a__c</fullName>
    <label>Energía</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electricidad</fullName>
            </value>
            <value>
                <fullName>Biomasa</fullName>
            </value>
            <value>
                <fullName>Butano</fullName>
            </value>
            <value>
                <fullName>Carbón</fullName>
            </value>
            <value>
                <fullName>Fuel</fullName>
            </value>
            <value>
                <fullName>Gas Natural</fullName>
            </value>
            <value>
                <fullName>Gasóleo</fullName>
            </value>
            <value>
                <fullName>GNL</fullName>
            </value>
            <value>
                <fullName>Madera / Leña</fullName>
            </value>
            <value>
                <fullName>Nuevo</fullName>
            </value>
            <value>
                <fullName>Otra</fullName>
            </value>
            <value>
                <fullName>Propano Botellas</fullName>
            </value>
            <value>
                <fullName>Propano Granel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>