force-app/main/default/objects/Equipo_actual__c/fields/Finalidad__c.field-meta.xml
<CustomField>
    <fullName>Finalidad__c</fullName>
    <label>Finalidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACS</fullName>
            </value>
            <value>
                <fullName>Calor</fullName>
            </value>
            <value>
                <fullName>Frío</fullName>
            </value>
            <value>
                <fullName>ACS y Calor</fullName>
            </value>
            <value>
                <fullName>Calor y Frío</fullName>
            </value>
            <value>
                <fullName>ACS, Calor y Frío</fullName>
            </value>
            <value>
                <fullName>Cocina</fullName>
            </value>
            <value>
                <fullName>Ropa</fullName>
            </value>
            <value>
                <fullName>Lavado</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>