force-app/main/default/objects/Equipo_actual__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Equipos actuales</relationshipLabel>
    <relationshipName>Equipos_actuales</relationshipName>
    <type>Lookup</type>
</CustomField>