force-app/main/default/objects/Equipo_actual__c/fields/Potencia_KW__c.field-meta.xml
<CustomField>
    <fullName>Potencia_KW__c</fullName>
    <label>Potencia KW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>