force-app/main/default/objects/Equipo_actual__c/fields/Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Presupuesto</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Equipos actuales</relationshipLabel>
    <relationshipName>Equipos_actuales</relationshipName>
    <type>Lookup</type>
</CustomField>