force-app/main/default/objects/Equipo_actual__c/fields/Uso__c.field-meta.xml
<CustomField>
    <fullName>Uso__c</fullName>
    <label>Uso</label>
    <length>100</length>
    <type>Text</type>
</CustomField>